--- a/wechat.html
+++ b/wechat.html
@@ -340,7 +340,7 @@
                     color="#0000FF"><span style="font-size: 13pt">
                 	baowenpingsusu</span></font></div>
             <span style="font-size: 18px;">
-                <button class="click-btn join-weixin" id="join-weixin" data-clipboard-action="copy" data-clipboard-text="baowenpingsusu">点击添加微信</button>
+                <button class="click-btn join-weixin" id="join-echo" data-clipboard-action="copy" data-clipboard-text="baowenpingsusu">点击添加微信</button>
                 <div class="join-box clearfix">
                <img border="10" height="300px" width="200px" src="echo.jpg">
                 </div>
@@ -355,7 +355,7 @@
         </div>
         <script>
             $(document).ready(function () {
-                var clipboard = new Clipboard('#join-weixin');
+                var clipboard = new Clipboard('#join-echo');
                 clipboard.on('success', function (e) {
                     $('.copy-box').show();
                 });
