--- a/wechat.html
+++ b/wechat.html
@@ -347,7 +347,7 @@
                     color="#0000FF"><span style="font-size: 13pt">
                 	baowenpingsusu</span></font></div>
             <span style="font-size: 18px;">
-                <button style="cursor:pointer" class="click-btn join-weixin"onclick="" id="join-echo" data-clipboard-action="copy" data-clipboard-text="baowenpingsusu">点击添加微信</button>
+                <span  style="cursor:pointer" class="click-btn join-weixin"onclick="" id="join-echo" data-clipboard-action="copy" data-clipboard-text="baowenpingsusu">点击添加微信</button>
                 <div class="join-box clearfix">
                <img border="10" height="300px" width="200px" src="echo.jpg">
                 </div>
@@ -358,7 +358,7 @@
             <div class="close-box">
                 恭喜您</div>
             <div class="text">微信号复制成功<br>马上跳转微信加好友</div>
-            <a href="weixin://" class="goweixin">好</a>
+            <a href="weixin://" style="cursor:pointer" class="goweixin">好</a>
         </div>
         <script>
             // $(document).ready(function () {
